fixed issue with ribbon overflowing

--- a/src/static/css/defaults/controls.less
+++ b/src/static/css/defaults/controls.less
@@ -28,12 +28,23 @@ textarea.resizing {
 /* GITHUB RIBBON
  ****************/
 
-.github-ribbon {
+.github-ribbon-wrapper {
+  pointer-events: none;
   position: absolute;
   overflow: hidden;
-  padding: 2px 0;
+  top: 0;
+  right: 0;
+  width: 150px;
+  height: 150px;
+}
+
+.github-ribbon {
+  pointer-events: all;
+  position: absolute;
   top: 42px;
   right: -43px;
+
+  padding: 2px 0;
 
   background-color: #027902;
   .box-gradient-image(rgba(0, 0, 0, 0.00), rgba(0, 0, 0, 0.15));
